syntax = "proto3";

package pbstch;

import "gogoproto-1.4.3/gogoproto/gogo.proto";

enum From {
  option (gogoproto.goproto_enum_stringer) = true;
  option (gogoproto.goproto_enum_prefix)   = true;
  LEADER = 0 [(gogoproto.enumvalue_customname) = "Leader"];
  REPLICA = 1 [(gogoproto.enumvalue_customname) = "Replica"];
}

message IdentityX {
  bytes x = 1;
  string id = 2 [(gogoproto.customname) = "ID"];
}

message FnX {
  string from = 1;
  bytes data = 2;
  bytes x = 3;
}

message PublicKeySeg {
  string from = 1;
  bytes public_key = 2;
}

message SchnorrSig {
  bool flag = 1;
  From from = 2;
  bytes s = 3;
  bytes d = 4;
  int64 block_height = 5;
  int64 tx_index = 6;
  bytes tx = 7;
}

message AlphaExpKAndHK {
  bytes AlphaExpK = 1;
  bytes HK = 2;
}

message FinalVer {
  bytes val = 1;
  string redact_str = 2;
  bytes r2 = 3;
}

message Message {
  oneof data {
    IdentityX identity_x = 1;
    FnX Fnx = 2;
    PublicKeySeg PublicKeySeg = 3;
    SchnorrSig SchnorrSig = 4;
    AlphaExpKAndHK AlphaExpKAndHK = 5;
    FinalVer final_ver = 6;
  }
}